<resources>
    <string name="app_name">Ride Pal</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Firstname">First Name</string>
    <string name="Lastname">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="uploadphoto">Upload Photo</string>
    <string name="next">Next</string>
    <string name="forgetpassword">Forgot Password</string>
    <string name="createaccount">Create Account</string>
    <string name="preference">Preferences</string>
    <string name="agerange">Age Range</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="genderpref">Gender Preference</string>
    <string name="either">Either</string>
    <string name="searchwithin">Search Within (Miles)</string>
    <string name="vehicleinfo">Vehicle Info</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="platenumber">License Plate Number</string>
    <string name="skip">Skip</string>
    <string name="paymentinfo">Payment Info</string>
    <string name="ccname">Name on Card</string>
    <string name="ccnum">CC #</string>
    <string name="ccexp">Exp Date</string>
    <string name="ccccv">CCV #</string>
    <string name="cczip">Zip Code</string>
    <string name="finish">Finish</string>
    <string name="drivingmodeselect">I\'m Driving!</string>
    <string name="passengermodeselect">I\'m Riding!</string>
    <string name="modeselectreturn">Select Mode</string>
    <string name="driving">Driving</string>
    <string name="destinationquestion">Where are you going?</string>
    <string name="searchbutton">Search</string>
    <string name="mapsearchinput">Enter an address or place</string>
    <string name="google_android_map_api_key">AIzaSyB42SLMvdvtN6_P-GcgObIyf-u0S7Yu14Y</string>
    <string name="riding">Riding</string>
    <string name="signout">Sign Out</string>
    <string name="title_activity_driver_dest_search">Map</string>
    <string name="to">TO</string>
    <string name="searchforpassengers">Search for Passengers</string>
    <string name="searchfordrivers">Search for Drivers</string>
    <string name="timeofdeparture">Time of Departure</string>
    <string name="changepref">Change Preferences</string>
    <string name="cont">Continue</string>
    <string name="title_activity_driver_origin_search">Map</string>
    <string name="title_activity_passenger_dest_search">Map</string>
    <string name="title_activity_passenger_origin_search">Map</string>
    <string name="goback">Edit Search</string>
    <string name="editroute">Change Origin/Destination</string>
    <string name="backtoresults">Go Back to Results</string>
    <string name="sendrequest">Send Request</string>
    <string name="reqeustaccepted">Request Accepted!</string>
    <string name="driveto">Drive To </string>
    <string name="usegooglenav">Use Google Navigation</string>
    <string name="call">Call</string>
    <string name="pickup">Pick Up</string>
    <string name="tripdetails">Trip Details</string>
    <string name="endtrip">End Trip</string>
    <string name="emergency">Emergency</string>
    <string name="call911">Call 911</string>
    <string name="roadsideassistance">Roadside Assistance</string>
    <string name="back">Go Back</string>
    <string name="seedriverroute">See Driver Route</string>
    <string name="signaldriver">Signal Driver</string>
    <string name="driverhere">Driver is Here</string>
    <string name="drivername">Driver Name: </string>
    <string name="driverdestinationheader">Driver Destination: </string>
    <string name="drivermilesto">Total Miles between Driver Origin and Destination: </string>
    <string name="passengernameheader">Passenger Name: </string>
    <string name="passengerdestinationheader">Passenger Destination: </string>
    <string name="passengermilesto">Total Miles between Passenger Origin and Destination</string>
    <string name="tripdetailsheader">Trip Details</string>
    <string name="tripsummaryheader">Trip Summary</string>
    <string name="gaspriceatdestination">Average Gas Price at Destination: </string>
    <string name="totalgaspricefrotrip">Total Gas Price for Trip: </string>
    <string name="Sendgasrequest">Send Request for Gas Money: </string>
    <string name="paygasbutton">Pay Driver Gas Money:</string>
    <string name="getgasprice">Get Local Gas Prices</string>
    <string name="gasmessage">Click below to check nearby gas prices and input the nearest gas price below</string>
    <string name="gasbutton">Check Gas Prices</string>
    <string name="gaspriceinput">Enter Gas Price Here</string>
</resources>
