<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleInfo">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="456dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:id="@+id/vehicleinfotitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vehicleinfo"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/vehiclemake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/make" />

        <EditText
            android:id="@+id/vehiclemodel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/model" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yeartitle"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/year"
                android:textSize="20sp" />

            <Space
                android:layout_width="161dp"
                android:layout_height="66dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/vehicleyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <EditText
            android:id="@+id/vehiclecolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/color" />

        <EditText
            android:id="@+id/platenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/platenumber" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150px" />

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25px" />

        <Button
            android:id="@+id/skipbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>