<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPrefernces">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="468dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <TextView
            android:id="@+id/preftitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/preference"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <TextView
            android:id="@+id/agerangetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agerange"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/min"
                android:inputType="number" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/max"
                android:inputType="number" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <TextView
            android:id="@+id/genderpreftitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genderpref"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/genderprefset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/malebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femalebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/eitherbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/either" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <TextView
            android:id="@+id/searchwithintitile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchwithin"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/milesbar"
            android:layout_width="match_parent"
            android:layout_height="75px"
            android:max="50"
            android:progress="2" />

        <TextView
            android:id="@+id/miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150px" />

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>