<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverDestinationSearch">
    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013">

        <Button
            android:id="@+id/modeselect"
            android:layout_width="212dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/modeselectreturn" />

        <TextView
            android:id="@+id/drivermodetitle"
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/driving"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="377dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652">

        <fragment
            android:id="@+id/destinationmap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="154dp" />

        <TextView
            android:id="@+id/destinationquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/destinationquestion"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/desinationinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/mapsearchinput" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <TextView
            android:id="@+id/searchwithintitile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchwithin"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/milesbar"
            android:layout_width="match_parent"
            android:layout_height="75px"
            android:max="50"
            android:progress="2" />

        <TextView
            android:id="@+id/miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/searchbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchbutton" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>