<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverDriveToPassenger"
    android:orientation="vertical"
    android:weightSum="100">

    <fragment
        android:id="@+id/mapFrag"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_weight="25" />

    <Button
        android:id="@+id/btnGetDirections"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:text="@string/usegooglenav" />

    <Button
        android:id="@+id/callbutton"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_weight="1"
        android:text="@string/call" />

    <LinearLayout
        android:id="@+id/passcontainter"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passimage"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/pickupbutton"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pickup" />
    </LinearLayout>


</LinearLayout>