<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassengerDriverEnRoute"
    android:orientation="vertical"
    android:weightSum="100">

    <fragment
        android:id="@+id/mapFrag"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_weight="25" />

    <Button
        android:id="@+id/signaldriver"
        android:layout_width="match_parent"
        android:background="#551A8B"
        android:textColor="#FFF"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:textSize="14sp"

        android:text="@string/signaldriver" />

    <Button
        android:id="@+id/callbutton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:background="#551A8B"
        android:textColor="#FFF"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:text="@string/call" />

    <LinearLayout
        android:id="@+id/passcontainter"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="1"
        android:orientation="horizontal">s

        <ImageView
            android:id="@+id/driverimage"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/starttrip"
            android:background="#551A8B"
            android:textColor="#FFF"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/driverhere" />
    </LinearLayout>


</LinearLayout>